@@ -1,7 +1,5 @@
 #%PAM-1.0
-auth       sufficient   /lib/security/pam_unix.so shadow md5 nullok
-auth       required	/lib/security/pam_krb5afs.so use_first_pass
 account    required	/lib/security/pam_unix.so
-password   required	/lib/security/pam_cracklib.so retry=3
-password   sufficient   /lib/security/pam_unix.so shadow md5 nullok
+password   required     /lib/security/pam_cracklib.so retry=3
+password   sufficient   /lib/security/pam_unix.so shadow md5 nullok use_authtok
 password   required	/lib/security/pam_krb5afs.so use_authtok
